# openwebui-ai-wiki

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/deploy/: config.sample.yaml  docker-compose.snippet.yml  domains.sample.yaml  sp3-openwebui-agent.md
docs/superpowers/plans/: 2026-06-20-sp1-wiki-engine.md  2026-06-20-sp2-embedding-sync.md  2026-06-20-sp3-openwebui-agent.md
docs/superpowers/reports/: 2026-06-20-sp2-embedding-sync-design-check.html  2026-06-20-sp3-openwebui-agent-check.html  (+1 more)
docs/wiki/: architecture.md  chunking-and-storage.md  cli-and-daemon.md  deployment.md  development-workflow.md  domain-model.md  embedding-and-sync.md  entity-page-synthesis.md  ingest-pipeline.md  llm-client.md  openwebui-agent.md
docs/wiki/.iwiki/: index.jsonl  log.jsonl
prompts/: ingest_pages.md
src/owaw/: chunking.py  chunkstore.py  cli.py  config.py  daemon.py  domains.py  entities.py  extract.py  frontmatter.py  index.py  ingest.py  knowledge.py  llm.py  manifest.py  pages.py  paths.py  sync.py  syncstate.py
tests/: fakes.py  test_chunking.py  test_chunkstore.py  test_cli.py  test_config.py  test_daemon.py  test_deletion.py  test_doc_tool.py  test_domains.py  test_entities.py  test_extract.py  test_frontmatter.py  test_index.py  test_ingest.py  test_ingest_domain.py  test_integration.py  test_knowledge.py  test_knowledge_protocol.py  test_llm.py  test_manifest.py  test_pages.py  test_paths.py  test_provision.py  test_provision_cli.py  test_smoke.py  test_sync.py  test_sync_cli.py  test_sync_engine.py  test_sync_integration.py  test_syncstate.py
(+9 files in other folders)
