[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "owaw"
version = "0.1.0"
description = "openwebui-ai-wiki: server-side AI wiki engine (SP1)"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "openai>=1.40",
    "docling>=2.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
owaw = "owaw.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/owaw"]

[tool.hatch.build.targets.wheel.shared-data]
# prompts are shipped as package data alongside the Python files

[tool.hatch.build.targets.wheel.force-include]
"src/owaw/prompts/ingest_entities.md" = "owaw/prompts/ingest_entities.md"
"src/owaw/prompts/ingest_pages.md" = "owaw/prompts/ingest_pages.md"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
